Bug 8561 - xdm-1.1.0 painfully slow
Summary: xdm-1.1.0 painfully slow
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xdm (show other bugs)
Version: 7.1 (2006.05)
Hardware: Other Linux (All)
: high normal
Assignee: Alan Coopersmith
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-08 20:55 UTC by Adam J. Richter
Modified: 2007-02-01 15:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Adam J. Richter 2006-10-08 20:55:10 UTC
I upgraded to xdm-1.1.0 and it has become painfully slow.  It seems to have a 
delay of a fraction of a second (maybe 30ms, obviously longer than a screen 
refresh).  If I mistype my username and then attempt to erase it by holding 
down the backspace key until my username is completely erased, the text cursor 
then flashes repeatedly for a while at the left margin, which I think is 
because it was not keeping up with the autorepeat rate of the backspace key 
and is then slowly processing the other backspace characters!

If I have entered a lot of characters into the user name field (for example, 
by accidentally leaving something on the keyboard), it takes a long time to 
backspace over them.  Also, this version of xdm apparently does not let me use 
the mouse to select a ranger of characters and delete them, so using the 
backspace key is the only way to fix the problem.

xdm-1.1 also attempts to redraw the text cursor for each character of the 
password that I enter, even though nothing is being echoed.
Comment 1 Alan Coopersmith 2006-10-09 10:05:46 UTC
This is the downside of the attempt to make sure there was visible feedback when
typing by flashing the text cursor - it clearly needs some improvement.   (And
no version of xdm I've ever seen has allowed selecting text with a mouse cursor - 
since xdm uses direct Xlib calls instead of a canned widget for the text entry, 
it would take a bit of work to add mouse selection support.)
Comment 2 Adam J. Richter 2006-11-16 06:44:24 UTC
It appears that this problem persists in xdm-1.1.1.
Comment 3 Adam J. Richter 2007-01-19 04:41:11 UTC
It appears that this problem persists in xdm-1.1.3.

It appears to me that this "downside of the attempt to make sure there was 
visible feedback when typing by flashing the text cursor" outweighs the 
benefit, so the original patch that caused the problem should be reverted 
until such time as this "donwside" is fixed or at least the trade-off is 
positive.

I invite anyone who thinks the trade-off was positive on balance to explain 
here.
Comment 4 Alan Coopersmith 2007-01-19 09:28:02 UTC
Yes, I'm planning to make the added feedback configurable and set it off in the
default configuration, but haven't gotten a chance to get to it yet.
Comment 5 Alan Coopersmith 2007-02-01 15:25:16 UTC
Fix committed to git, will be included shortly in xdm-1.1.4 release:

commit 450e9eb2725be6ead1c6d3e5477b737ded04070b
Author: Alan Coopersmith <alan.coopersmith@sun.com>
Date:   Thu Feb 1 15:23:12 2007 -0800

    Bug #8561: xdm painfully slow at cursor redraws
    
    <https://bugs.freedesktop.org/show_bug.cgi?id=8561>
    Made code that waited for cursor redraws to appear onscreen conditional on
    FORCE_CURSOR_FLASH #define, which is off by default.

(If someone wants to make this runtime configurable instead of build-time, 
 patches will be gratefully accepted.)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.