Bug #8561: xdm painfully slow at cursor redraws

<https://bugs.freedesktop.org/show_bug.cgi?id=8561>
Made code that waited for cursor redraws to appear onscreen conditional on
FORCE_CURSOR_FLASH #define, which is off by default.